# rustmge

./: .gitignore  Cargo.toml  README.tdsl  mge.db  mgeserver.txt
src/: challonge.rs  main.rs  server.rs
static/: index.html
